test/fail_compilation/fail289.d
alias void delegate() dg;
void fun(){}
void gun(){

  dg d=cast(void delegate())&fun;
}
